--- a/src/Styles/Title.scss
+++ b/src/Styles/Title.scss
@@ -3,4 +3,5 @@
   width: 100%;
   margin: 50px 0px;
   font-size: 28px;
+  color: rgb(48,162,204);
 }
